deploy/argocd/apps/sogo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sogo
  labels:
    app.kubernetes.io/name: sogo
