deploy/argocd/apps/sogo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sogo
  namespace: sogo
  labels:
    app.kubernetes.io/name: sogo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: sogo
